<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/input_type"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_prim_value"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_input"
                android:inputType="none"
                android:singleLine="true"
                android:textSize="18sp" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/show_data_ll"
            android:layout_width="fill_parent"
            android:layout_height="30dip"
            android:background="@drawable/list_selector_background_default"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/local_data"
                android:textSize="18sp" />

            <View
                android:layout_width="5dip"
                android:layout_height="fill_parent"
                android:background="@drawable/ic_lockscreen_player_background" />

            <TextView
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/remote_data"
                android:textSize="18sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/show_columes_lv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/show_running_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="20dip"
            android:background="@color/green"
            android:text="@string/show_control_hint" />
    </LinearLayout>

    <TextView
        android:id="@+id/show_alert_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/show_alert_str"
        android:visibility="gone" />

</LinearLayout>